# @configure_input@

# this is only needed for recursive Makefiles, to point to Makefiles
# in other source dirs
# SUBDIRS = src

AM_CFLAGS = -Wall -fpic -std=c99 -Winline -fgnu89-inline

# list of all products:
bin_PROGRAMS = test
test_SOURCES = \
							 test.c \
							 Basic.h \
							 Buffer.h
